# NLP_classification

./: .gitignore  README.md  pyproject.toml
data/: test.xlsx  train.xlsx
notebook/: Basic_Preprocessing_&_Classification.ipynb  Basic_Preprocessing_&_Logistic_Regression.ipynb  IndoBERT.ipynb  IndoBERT_with_Symspell_&_Stemming.ipynb  SVM_vs_IndoBERT.ipynb  Wiki40B.ipynb  XLM_Roberta.ipynb  portuguese-imdb-classification.ipynb
references/: answer_template.xlsx  guideline.docx  link_reference.docx
src/: __init__.py
